[gd_scene load_steps=6 format=3 uid="uid://by5p5hnnndlxb"]

[ext_resource type="Script" path="res://character_body_2d.gd" id="1_j3amv"]
[ext_resource type="Texture2D" uid="uid://u2l0kikmvub4" path="res://Characters/dekica2.png" id="2_vtihm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4lxmw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vtihm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fbvic"]
height = 31.8

[sub_resource type="CircleShape2D" id="CircleShape2D_w37j7"]
radius = 37.1214

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_j3amv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4lxmw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_fbvic")

[node name="AttackArea" type="Area2D" parent="." groups=["player_attack"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_w37j7")
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GravityTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
